Fix TSE request

--- a/src/index.html
+++ b/src/index.html
@@ -22,15 +22,15 @@
             <div class='date'>Sunday 29 August 2021</div>
           </section>
           <div class='current'>
-            <div class="temp">15<span>°C</span></div>
+            <div class="temp btn">15 °C</div>
             <div class='weather'>Sunny</div>
             <div class='hi-low'>13°C /15°C</div>
           </div>
           
-          <button class='btn'>
+          <!-- <button class='btn'>
             <p>Toggle Between °C and F </p>
-          <p><span class='change'>-</span> <span class="toggle">° C</span></p>
-        </button>
+          <p><span class='change'>-</span> <span class='toggle'>° C</span></p>
+        </button> -->
         </main>
     </div>
     <script src="index.js"></script>
