--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
           </section>
           <div class='current'>
             <div class="temp btn">15 °C</div>
+            <div class='instruction-temp'>Click above Temp for conversion </div>
             <div class='weather'>Sunny</div>
             <div class='hi-low'>13°C /15°C</div>
           </div>
