Edit toggle button

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
           </section>
           <div class='current'>
             <div class="temp btn">15 °C</div>
-            <div class='instruction-temp'><button class='btn-button'>°C F °K</button> </div>
+            <div class='instruction-temp'><button class='btn-button'>F °K °C</button> </div>
             <div class='weather'>Sunny</div>
             <div class='hi-low'>13°C /15°C</div>
           </div>
